# fairseq-lua

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  generate-lines.lua  generate.lua  help.lua  optimize-fconv.lua  preprocess.lua  run.lua  score.lua  tofloat.lua  train.lua
data/: prepare-iwslt14.sh
fairseq/: init.lua  search.lua  utils.lua
fairseq/clib/: bleu.lua  init.lua  logsoftmax.cpp  topk.cpp
fairseq/models/: avgpool_model.lua  blstm_model.lua  conv_model.lua  ensemble_model.lua  fconv_model.lua  init.lua  model.lua  selection_blstm_model.lua  utils.lua
fairseq/modules/: AppendBias.lua  BeamableMM.lua  CAddTableMulConstant.lua  CLSTM.lua  CudnnRnnTable.lua  GradMultiply.lua  LinearizedConvolution.lua  SeqMultiply.lua  TrainTestLayer.lua  ZipAlong.lua  init.lua
fairseq/optim/: nag.lua
fairseq/text/: Dictionary.lua  bleu.lua  init.lua  lm_corpus.lua  pretty.lua  tokenizer.lua
fairseq/torchnet/: MaxBatchDataset.lua  ResumableDPOptimEngine.lua  ShardedDatasetIterator.lua  SingleParallelIterator.lua  data.lua  hooks.lua  init.lua
rocks/: fairseq-cpu-scm-1.rockspec  fairseq-scm-1.rockspec
scripts/: binarize.lua  build_sym_alignment.py  make_fconv_vocsel.lua  makealigndict.lua  makedict.lua  unkreplace.lua
test/: test.lua  test_appendbias.lua  test_dictionary.lua  test_logsoftmax.lua  test_tokenizer.lua  test_topk.lua  test_zipalong.lua
